set achievement name (thanks Fiene)

--- a/src/main/resources/assets/endermite_overhaul/lang/en_US.lang
+++ b/src/main/resources/assets/endermite_overhaul/lang/en_US.lang
@@ -1,4 +1,4 @@
 entity.endermite_overhaul.endermite.name=Endermite
 tile.endermite_overhaul.endermite_egg.name=Endermite Egg
-achievement.endermiteEgg=TODO
+achievement.endermiteEgg=The Ender or the Egg?
 achievement.endermiteEgg.desc=Kill an endermen around an endermite egg
